# SimpleSGEViz

./: README.md  make_vcf.py  pipeline.py  pyproject.toml
sample_files/: supplementary_file_1_BARD1_SGE_final_table.xlsx
sample_files/sample_dataprocessing/: SGE_Correlation_analysis.ipynb  SGE_Histogram_Stripplot.ipynb  SGE_MAFvsSGEscore.ipynb  SGE_MakeFinalDataTable.ipynb
sample_files/sample_extra_data/: 20240802_BARD1_Regeneron_MAF.xlsx
sgeviz/: io.py  process.py
sgeviz/figures/: aa_heatmap.py  base.py  clinvar_strip.py  correlation.py  edit_rate_barplot.py  gene_cartoon.py  histogram_strip.py  predictor_scatter.py  scores_gene.py
